Add User Profiles handling